# gobject-linter

./: .gitattributes  .gitignore  CONFIG.md  Cargo.toml  Dockerfile  README.md  gobject-linter.toml
gobject-ast/: Cargo.toml
gobject-ast/src/: lib.rs  main.rs
gobject-ast/src/model/: comment.rs  doc.rs  mod.rs  operators.rs  project.rs  source_location.rs  top_level.rs  type_info.rs
gobject-ast/src/parser/: gobject.rs  mod.rs  top_level.rs
gobject-ast/tests/: comment_parsing.rs  gobject_parsing_tests.rs  statement_parsing.rs
gobject-ast/tests/fixtures/: anonymous_union.h  bitfield_struct.h  comments.c  for_init.c  typedef_callback.h  variadic_func.h
src/: ast_context.rs  (+9 more)
tests/fixtures/: meson.build
tests/fixtures/dead_code/: iface_init.c  meson.build  unused_enum_value.c  unused_enum_value.stderr  unused_field.c  unused_field.stderr  used_enum_values.c  used_fields.c  used_fields.stderr  used_in_g_new0.c  used_in_g_new0.stderr  used_in_macro_named_array.c
tests/fixtures/deprecated_add_private/: basic.c  basic.stderr  meson.build
tests/fixtures/g_error_init/: meson.build  no_match.c
tests/fixtures/g_error_leak/: meson.build
tests/fixtures/g_object_virtual_methods_chain_up/: basic.c  basic.fixed.c  basic.stderr  meson.build
tests/fixtures/g_param_spec_null_nick_blurb/: basic.c  basic.fixed.c  basic.stderr  meson.build  with_gettext.c  with_gettext.fixed.c  with_gettext.stderr
tests/fixtures/g_param_spec_static_strings/: basic.c  basic.fixed.c  basic.stderr  cast_with_static_strings.c  issue_29.c  issue_29.fixed.c  issue_29.stderr  meson.build
tests/fixtures/g_source_id_not_stored/: basic.c  basic.stderr  meson.build
tests/fixtures/g_task_source_tag/: basic.c  basic.fixed.c  basic.stderr  meson.build  multiline.c  multiline.fixed.c  multiline.stderr
tests/fixtures/gi_missing_since/: enum_since.h  enum_since.public_headers  enum_since.stderr  functions.c  functions.h  functions.stderr  meson.build  type_since.c  type_since.h  type_since.public_headers  type_since.stderr
tests/fixtures/gi_not_bindings_friendly/: bindings.h  bindings.stderr  meson.build
tests/fixtures/include_order/: meson.build
tests/fixtures/inconsistent_function_signature/: meson.build  mismatch.c  mismatch.h  mismatch.stderr  no_mismatch.c  no_mismatch.h  param_mismatch.c  param_mismatch.h  param_mismatch.stderr  static_mismatch.c  static_mismatch.stderr
tests/fixtures/inline_ignore/: meson.build  test.c  test_wildcards.c
tests/fixtures/matching_declare_define/: basic.c  meson.build  mismatch.c  mismatch.stderr
tests/fixtures/missing_autoptr_cleanup/: has_cleanup.c  meson.build  missing_cleanup.c  missing_cleanup.stderr  with_code_variant.c  with_code_variant.stderr
tests/fixtures/missing_export_macro/: meson.build  with_export.h
tests/fixtures/missing_implementation/: gettype.c  gettype.h  meson.build
tests/fixtures/no_g_auto_macros/: has_auto_macros.c  has_auto_macros.stderr  meson.build
tests/fixtures/property_canonical_name/: basic.c  basic.fixed.c  basic.stderr  i_macro.c  meson.build  runtime_calls.c  runtime_calls.fixed.c  runtime_calls.stderr
tests/fixtures/property_enum_convention/: anonymous_enum.c  anonymous_enum.fixed.c  anonymous_enum.stderr  anonymous_modern_enum_missing_switch_cast.c  anonymous_modern_enum_missing_switch_cast.fixed.c  anonymous_modern_enum_missing_switch_cast.stderr  basic.c  basic.fixed.c  basic.stderr  blank_lines.c  blank_lines.fixed.c  blank_lines.stderr  edge_cases.c  edge_cases.fixed.c  edge_cases.stderr  install_property_singular.c  install_property_singular.fixed.c  install_property_singular.stderr  meson.build  modern_enum_missing_switch_cast.c  modern_enum_missing_switch_cast.fixed.c  modern_enum_missing_switch_cast.stderr  n_props_explicit_value.c  n_props_explicit_value.fixed.c  n_props_explicit_value.stderr  n_props_in_switch.c  n_props_in_switch.fixed.c  no_get_property.c  no_get_property.fixed.c  no_get_property.stderr  outdated_array_size_missing_update.c  outdated_array_size_missing_update.fixed.c  outdated_array_size_missing_update.stderr  outdated_array_size_mixed.c  outdated_array_size_mixed.fixed.c  outdated_array_size_mixed.stderr  outdated_array_size_up_to_date.fixed.c  override_properties.c  override_properties.fixed.c  prop_last_substring.c  (+5 more)
tests/fixtures/property_enum_coverage/: define_property_name.c  meson.build
tests/fixtures/property_switch_exhaustiveness/: all_handled.fixed.c  casted_auto_fixable.c  casted_auto_fixable.fixed.c  casted_auto_fixable.stderr  casted_needs_implementation.c  casted_needs_implementation.stderr  delegation_inner_switch.c  exhaustive_with_cast.c  exhaustive_with_cast.stderr  meson.build  missing_in_getter.c  missing_in_getter.stderr  multiple_missing_cases.c  multiple_missing_cases.fixed.c  multiple_missing_cases.stderr  read_only_properties.c  read_only_properties.fixed.c  read_only_properties.fixed.stderr  read_only_properties.stderr  write_only_properties.c  write_only_properties.fixed.c  write_only_properties.fixed.stderr  write_only_properties.stderr
tests/fixtures/signal_canonical_name/: correct_hyphens.c  detailed_signals.c  detailed_signals.fixed.c  detailed_signals.stderr  meson.build  signal_connect.c  signal_connect.fixed.c  signal_connect.stderr  signal_lookup_and_group.c  signal_lookup_and_group.fixed.c  signal_lookup_and_group.stderr
tests/fixtures/signal_enum_coverage/: all_installed.c  meson.build
tests/fixtures/strcmp_explicit_comparison/: meson.build
tests/fixtures/type_style/: already_glib.c  meson.build  pointer_locals.c  pointer_locals.fixed.c  pointer_locals.stderr  prefer_glib.c  prefer_glib.fixed.c  prefer_glib.stderr  prefer_glib_body.c  prefer_glib_body.fixed.c  prefer_glib_body.stderr
tests/fixtures/unnecessary_null_check/: for_loop.c  for_loop.stderr  meson.build
tests/fixtures/untranslated_string/: basic.c  basic.stderr  format_strings.c  format_strings.stderr  meson.build
tests/fixtures/unused_vfunc/: meson.build
tree-sitter-c-gobject/: Cargo.toml  grammar.js
tree-sitter-c-gobject/src/: grammar.json  node-types.json  scanner.c
(+275 files in other folders)
