[workspace]
members = ["gobject-ast", "tree-sitter-c-gobject"]
resolver = "2"

[package]
name = "gobject-linter"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/bilelmoussaoui/gobject-linter"
license = "MIT"

[features]
lsp = ["dep:tower-lsp", "dep:tokio"]

[[bin]]
name = "gobject-linter"
path = "src/main.rs"

[[bin]]
name = "gobject-linter-lsp"
path = "src/lsp/main.rs"
required-features = ["lsp"]

[dependencies]
gobject-ast = { path = "gobject-ast" }
tree-sitter = "0.26"
clap = { version = "4.6", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
ignore = "0.4"
anyhow = "1.0"
colored = "3.1"
globset = "0.4"
indicatif = "0.18"
heck = "0.5"
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"], optional = true }
serde_json = "1.0"
unidiff = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
