[workspace]
members = ["gobject-ast", "tree-sitter-c-gobject"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/bilelmoussaoui/gobject-linter"
version = "0.1.0"

[workspace.lints.clippy]
use_self = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
semicolon_if_nothing_returned = "warn"
map_unwrap_or = "warn"
ignored_unit_patterns = "warn"
needless_pass_by_value = "warn"

[package]
name = "gobject-linter"
description = "A fast tree-sitter-based linter for GObject/C code"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
lsp = ["dep:tower-lsp", "dep:tokio"]

[[bin]]
name = "gobject-linter"
path = "src/main.rs"

[[bin]]
name = "gobject-linter-lsp"
path = "src/lsp/main.rs"
required-features = ["lsp"]

[dependencies]
gobject-ast = { path = "gobject-ast" }
tree-sitter = "0.26"
clap = { version = "4.6", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
ignore = "0.4"
anyhow = "1.0"
colored = "3.1"
globset = "0.4"
indicatif = "0.18"
heck = "0.5"
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"], optional = true }
serde_json = "1.0"
unidiff = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
