[package]
name = "gobject-ast"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "AST representation of GObject C code"

[[bin]]
name = "gobject-ast"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-c-gobject = { version = "0.1.1", path = "../tree-sitter-c-gobject" }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
