[package]
name = "tree-sitter-c-gobject"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "GObject-aware C grammar for tree-sitter"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = "0.26"

[build-dependencies]
cc = "1.2"
