project('gobject-format-fixtures', 'c',
  default_options: ['warning_level=0'],
)

glib_dep = dependency('glib-2.0')
gobject_dep = dependency('gobject-2.0')
gio_dep = dependency('gio-2.0')

gtk4_dep = dependency('gtk4', required: false)
adwaita_dep = dependency('libadwaita-1', required: false)

fixture_deps = [glib_dep, gobject_dep, gio_dep]
fixture_c_args = [
  '-Wno-implicit-function-declaration',
]

subdir('dead_code')
subdir('deprecated_add_private')
subdir('g_error_init')
subdir('g_error_leak')
subdir('gi_missing_since')
subdir('gi_not_bindings_friendly')
subdir('g_object_virtual_methods_chain_up')
subdir('g_param_spec_null_nick_blurb')
subdir('g_param_spec_static_strings')
subdir('g_source_id_not_stored')
subdir('g_task_source_tag')
subdir('include_order')
subdir('inconsistent_function_signature')
subdir('inline_ignore')
subdir('matching_declare_define')
subdir('missing_autoptr_cleanup')
subdir('missing_export_macro')
subdir('missing_implementation')
subdir('no_g_auto_macros')
subdir('property_canonical_name')
subdir('property_enum_convention')
subdir('property_enum_coverage')
subdir('property_switch_exhaustiveness')
subdir('signal_canonical_name')
subdir('signal_enum_coverage')
subdir('strcmp_explicit_comparison')
subdir('type_style')
subdir('unnecessary_null_check')
subdir('untranslated_string')
subdir('use_auto_cleanup')
subdir('use_clear_functions')
subdir('use_explicit_default_flags')
subdir('use_g_ascii_functions')
subdir('use_g_bytes_unref_to_data')
subdir('use_g_file_load_bytes')
if glib_dep.version().version_compare('>= 2.87')
  subdir('use_g_gnuc_flag_enum')
endif
subdir('use_g_new')
subdir('use_g_object_class_install_properties')
subdir('use_g_object_new_with_properties')
subdir('use_g_object_notify_by_pspec')
subdir('use_g_set_object')
subdir('use_g_set_str')
subdir('use_g_settings_typed')
subdir('use_g_source_constants')
subdir('use_g_source_once')
subdir('use_g_steal_pointer')
subdir('use_g_strcmp0')
subdir('use_g_str_has_prefix_suffix')
subdir('use_g_string_free_and_steal')
subdir('use_g_strlcpy')
subdir('use_g_value_set_static_string')
subdir('use_g_variant_new_typed')
subdir('unused_vfunc')
subdir('use_pragma_once')
