sources = [
  'anonymous_enum.c',
  'anonymous_enum.fixed.c',
  'anonymous_modern_enum_missing_switch_cast.c',
  'anonymous_modern_enum_missing_switch_cast.fixed.c',
  'basic.c',
  'basic.fixed.c',
  'blank_lines.c',
  'blank_lines.fixed.c',
  'edge_cases.c',
  'edge_cases.fixed.c',
  'install_property_singular.c',
  'install_property_singular.fixed.c',
  'modern_enum_missing_switch_cast.c',
  'modern_enum_missing_switch_cast.fixed.c',
  'no_get_property.c',
  'no_get_property.fixed.c',
  'n_props_explicit_value.c',
  'n_props_explicit_value.fixed.c',
  'n_props_in_switch.c',
  'n_props_in_switch.fixed.c',
  'outdated_array_size_missing_update.c',
  'outdated_array_size_missing_update.fixed.c',
  'outdated_array_size_mixed.c',
  'outdated_array_size_mixed.fixed.c',
  'outdated_array_size_up_to_date.c',
  'outdated_array_size_up_to_date.fixed.c',
  'override_properties.c',
  'override_properties.fixed.c',
  'prop_last_substring.c',
  'prop_last_substring.fixed.c',
  'switch_cast.c',
  'switch_cast.fixed.c',
]

foreach src : sources
  static_library('property_enum_convention_' + src.underscorify(),
    src,
    dependencies: fixture_deps,
    c_args: fixture_c_args,
  )
endforeach
